--- a/src/app/components/client-preview/client-preview.component.html
+++ b/src/app/components/client-preview/client-preview.component.html
@@ -1,3 +1,19 @@
-<p>
-  client-preview works!
-</p>
+<mat-card>
+	<mat-card-title>
+		Cliente <span></span>
+	</mat-card-title>
+	<mat-card-subtitle>
+		Subtitle
+	</mat-card-subtitle>
+	<mat-card-content>
+		Content
+	</mat-card-content>
+
+	<mat-card-actions>
+		Actions
+	</mat-card-actions>
+
+	<mat-card-footer>
+		Footer
+	</mat-card-footer>
+</mat-card>
