incluyendo mapa y emparejando clientes

--- a/src/app/components/client-preview/client-preview.component.html
+++ b/src/app/components/client-preview/client-preview.component.html
@@ -1,6 +1,6 @@
 <mat-card>
 	<mat-card-title>
-		Cliente <span></span>
+		Cliente <span>{{ alias }}</span>
 	</mat-card-title>
 	<mat-card-subtitle>
 		Subtitle
